[package]
name = "reproduce"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wow_login_messages = { version = "0.1" }
wow_world_messages = { git="https://github.com/gtker/wow_messages.git", branch="main", features=["wrath", "chrono", "encryption"] }
